# CodeMAP

./: .gitignore  BLUEPRINT.md  HANDOFF.md  HANDOFF_phase1.md  LICENSE  NEXT_SESSION_PROMPT.md  OKX_ASP.md  PHASE3.md  PHASE4.md  PHASE5.md  README.md  SECURITY.md  Task_plan.md  architect-review.md  codemap-security-review.md  handoff-phase-5.md  handoff.md  pyproject.toml  python-packaging-reviewer.md  report-bug-finder.md  ui-ux-reviewer.md
.claude/agents/: open-source-distribution.md  python-packaging-spesialist.md  security-agent.md  testing.md  ux-first.md
.github/workflows/: publish.yml  test.yml
codemap/: cli.py
codemap/ai/: cache.py  provider.py
codemap/frontend/: filter.js  graph.js  index.html  panel.js  search.js  style.css  toast.js
codemap/scanner/: ast_parser.py  resolver.py  sanitize.py
codemap/server/: app.py
graps/: cli.py
graps/ai/: cache.py  provider.py  report-ai-cases.md
graps/frontend/: filter.js  graph.js  index.html  panel.js  report-bug-frontend.md  search.js  style.css  toast.js
graps/scanner/: __init__.py  ast_parser.py  graph_builder.py  report-bug-scanner.md  resolver.py  risk_analyzer.py  sanitize.py  tree_sitter_parser.py
graps/server/: app.py  report-bug-server.py
security/: graps-security-review.md  sanitize_constant_value.py
tests/: test_api.py  test_ast_parser.py  test_cache.py  test_cli_dispatch.py  test_graph_builder.py  test_provider.py  test_resolver.py  test_risk_analyzer.py  test_tree_sitter_parser.py
tests/bug_test/: test_scanner_bug.py
tests/fixtures/: all_definition.py  circular_a.py  circular_b.py  dead_code.py  decorators.py  dynamic_import.py  exec_eval.py  latin1_encoded.py  nested_functions.py  none_return.py  secret_constants.py  simple.py  star_import.py  type_checking.py
tests/fixtures/go/: simple.go  unexported.go
tests/fixtures/javascript/: commonjs.js  simple.js
tests/fixtures/relative_imports/: main.py
tests/fixtures/rust/: pub_private.rs  simple.rs
tests/fixtures/typescript/: arrow_functions.ts  class_methods.ts  export_patterns.ts  simple.ts
