[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "graps"
version = "0.1.0"
description = "Interactive visual dependency graph for Python codebases"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
  { name = "graps Contributors" }
]
keywords = ["codebase", "visualization", "ast", "dependency-graph", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Utilities",
]

dependencies = [
  "typer>=0.12.0",
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.28.0"]
openai = ["openai>=1.30.0"]
ai = ["anthropic>=0.28.0", "openai>=1.30.0"]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "httpx>=0.27.0",
  "ruff>=0.4.0",
  "mypy>=1.10.0",
]

[project.scripts]
graps = "graps.cli:app"

# ponytail: isi Homepage/Issues setelah repo publik
# [project.urls]

[tool.hatch.build.targets.wheel]
packages = ["graps"]

# ponytail: hatchling only ships .py files by default; force-include needed
# for non-.py frontend assets (HTML/JS/CSS) inside the graps package.
[tool.hatch.build.targets.wheel.force-include]
"graps/frontend" = "graps/frontend"

[tool.hatch.build.targets.sdist]
include = [
  "graps/",
  "graps/frontend/",
  "tests/",
  "pyproject.toml",
  "README.md",
  "LICENSE",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
